--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,8 @@ flask-blueprint==1.3.0
 Flask-JWT-Extended==4.5.2
 Flask-Login==0.6.2
 Flask-Migrate==4.0.4
+Flask-Reuploaded==1.4.0
 Flask-SQLAlchemy==3.0.5
-Flask-Uploads==0.2.1
 Flask-WTF==1.1.1
 greenlet==2.0.2
 idna==3.4
@@ -25,9 +25,13 @@ Jinja2==3.1.2
 joserfc==0.8.0
 Mako==1.2.4
 MarkupSafe==2.1.3
+Pillow==10.0.1
 pycparser==2.21
 PyJWT==2.8.0
+pypng==0.20220715.0
+python-barcode==0.15.1
 python-dotenv==1.0.0
+qrcode==7.4.2
 SQLAlchemy==2.0.20
 typing_extensions==4.7.1
 Werkzeug==2.3.7
