--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ joserfc==0.8.0
 Mako==1.2.4
 MarkupSafe==2.1.3
 Pillow==10.0.1
+psycopg2-binary==2.9.9
 pycparser==2.21
 PyJWT==2.8.0
 pypng==0.20220715.0
